// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedSidebar correctly expand users menu 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Administration"
  >
    <SubMenu
      title="User Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users"
        >
          Users
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/groups"
        >
          User Groups
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/roles"
        >
          User Roles
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar displays menu links for All Enabled modules 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Administration"
  >
    <SubMenu
      title="Location Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/unit"
        >
          Location Units
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/location/group"
        >
          Location Unit Group
        </Link>
      </MenuItem>
    </SubMenu>
    <SubMenu
      title="Team Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/teams"
        >
          Teams
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/teams/team-assignment"
        >
          Team Assignment
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar renders the ConnectedSidebar component 1`] = `
Object {
  "children": Array [
    <div
      className="ant-layout-sider-children"
    >
      <div
        className="logo"
      >
        <Link
          to="/"
        >
          <img
            alt="The logo"
            src="https://github.com/OpenSRP/web/raw/master/app/src/assets/images/opensrp-logo-color.png"
          />
        </Link>
      </div>
      <Menu
        className="menu-dark"
        defaultOpenKeys={Array []}
        defaultSelectedKeys={
          Array [
            "",
          ]
        }
        mode="inline"
        onOpenChange={[Function]}
        openKeys={Array []}
        selectedKeys={
          Array [
            "",
          ]
        }
        theme="dark"
      >
        <SubMenu
          icon={<ForwardRef(DashboardOutlined) />}
          title="Administration"
        />
      </Menu>
    </div>,
    null,
  ],
  "className": "ant-layout-sider ant-layout-sider-dark layout-sider",
  "style": Object {
    "flex": "0 0 275px",
    "maxWidth": "275px",
    "minWidth": "275px",
    "width": "275px",
  },
}
`;

exports[`components/ConnectedSidebar renders user managment menu for users with appropriate role 1`] = `
Array [
  <SubMenu
    icon={<ForwardRef(DashboardOutlined) />}
    title="Administration"
  >
    <SubMenu
      title="User Management"
    >
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users"
        >
          Users
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/groups"
        >
          User Groups
        </Link>
      </MenuItem>
      <MenuItem>
        <Link
          className="admin-link"
          to="/admin/users/roles"
        >
          User Roles
        </Link>
      </MenuItem>
    </SubMenu>
  </SubMenu>,
]
`;

exports[`components/ConnectedSidebar shows the correct logo: Logo 1`] = `
<div
  className="logo"
>
  <Link
    to="/"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="The logo"
        src="https://github.com/OpenSRP/web/raw/master/app/src/assets/images/opensrp-logo-color.png"
      />
    </a>
  </Link>
</div>
`;
